1 shesharp year event added

--- a/index.html
+++ b/index.html
@@ -256,22 +256,36 @@
                         <p class="text-muted">Don't Just Browse, Create!</p>
                     </div>
                 </div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-						<div class="portfolio-hover">
-							<div class="portfolio-hover-content">
-								<!-- <i class="fa fa-plus fa-3x"></i> -->
-							</div>
-						</div>
-						<img src="img/events/photoworkshop-banner.png" class="img-responsive" alt="">
-					</a>
-					<div class="portfolio-caption">
-						<h4>PHOTO[work]SHOP</h4>
-						<p class="text-muted">Photoshop Seminar</p>
-					</div>
-				</div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/birthday-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>1 (She)Sharp Year</h4>
+                        <p class="text-muted">Nothing new to learn here, just a celebration!</p>
+                    </div>
+                </div>
+        				<div class="col-md-4 col-sm-6 portfolio-item">
+        					<a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+        						<div class="portfolio-hover">
+        							<div class="portfolio-hover-content">
+        								<!-- <i class="fa fa-plus fa-3x"></i> -->
+        							</div>
+        						</div>
+        						<img src="img/events/photoworkshop-banner.png" class="img-responsive" alt="">
+        					</a>
+        					<div class="portfolio-caption">
+        						<h4>PHOTO[work]SHOP</h4>
+        						<p class="text-muted">Photoshop Seminar</p>
+        					</div>
+        				</div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                <!-- <i class="fa fa-plus fa-3x"></i> -->
@@ -284,8 +298,8 @@
                         <p class="text-muted">Massive edits on greek Wikipedia.</p>
                     </div>
                 </div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+				        <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
@@ -299,7 +313,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                <!-- <i class="fa fa-plus fa-3x"></i> -->
@@ -312,33 +326,18 @@
                         <p class="text-muted">An introduction to Javascript and HTML Canvas.</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <!-- <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal"> -->
+                <!--<div class="col-md-4 col-sm-6 portfolio-item">
+                      <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                               <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/events/firstmeetup.jpg" class="img-responsive" alt="">
-                    <!-- </a> -->
+                      </a>
                     <div class="portfolio-caption">
                         <h4>1st Meetup</h4>
                         <p class="text-muted">Opinion exchange while getting to know each other.</p>
-                    </div>
-                </div>
-                <!--
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/events/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
                     </div>
                 </div>-->
             </div>
@@ -907,35 +906,8 @@
         </div>
     </div> -->
 
-    <!-- Event Modal 6
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/events/dreams-preview.png" alt="">
-                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
 	<!-- USED -->
 
-    <!-- Event Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -981,6 +953,35 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
+                            <h2>1 (She)Sharp Year</h2>
+                            <p class="item-intro text-muted">It's been a whole year! Can you believe it? We can't.<br>We want to thank everyone for the support, so what about a party to celebrate the year passed and talk about what's next? We might also have a little surprise for you ;)</p>
+                            <p class="item-intro text-muted">See you there!</p>
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: October 30<sup>th</sup> 2015 </li>
+                                <li><strong>Time</strong>: 21:00</li>
+                                <li><strong>Place</strong>: <a href="https://www.facebook.com/LaDozeBar/?rf=304242582949442" target="_blank">La Doze</a></li>
+                            </ul>
+                            <img class="img-responsive img-centered" src="img/events/birthday-poster.png" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>PHOTO[work]SHOP</h2>
                             <p class="item-intro text-muted">Καλώς ήρθατε στο σεμινάριο Photoshop που διοργανώνει η ομάδα SheSharp, με στόχο την κάλυψη της ύλης για την Πιστοποίηση Photoshop της Adobe. Το σεμινάριο γίνεται με την υποστηριξη του City College, στις εγκαταστάσεις του οποίου θα πραγματοποιηθούν τα μαθήματα και απευθύνεται σε όλους όσους έχουν τη διάθεση να μάθουν κάτι καινουριο ή/και να εμβαθύνουν τη γνώση τους στη χρήση αυτού του πολύ ισχυρού εργαλείου. Η ύλη χωρίζεται σε τέσσερα μέρη και θα καλυφθεί στα επιμέρους μαθήματα σύμφωνα με το παρακάτω πρόγραμμα:<br /><br />
@@ -1006,7 +1007,7 @@
     </div>
 
      <!-- Event Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -1021,15 +1022,14 @@
                             <!-- Project Details Go Here -->
                             <h2>1st Editathon</h2>
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
-                            <p class="item-intro text-muted">This event was about contributing on greek Wikipedia (Βικιπαίδεια). Volunteers that attended the event, edited greek articles in order to enrich the famous encyclopedia and be a part of this community. At the beginning there was an introduction to Wikipedia and the basics one needs to know in order to contribute as well as some guidelines the volunteers should be aware of. <br /> The presentation of the event along with some documents with articles shortage can be found <a href="https://www.dropbox.com/sh/vyh6bdo68574uea/AABVDvwMgbYBj3u9I-uotJtha?dl=0" target="_blank">here</a>. The photos from the event can be found <a href="https://www.facebook.com/media/set/?set=a.1581774068778344.1073741833.1477395465882872&type=1" target="_blank">here</a> and <a href="https://www.flickr.com/photos/christosbacharakis/sets/72157649958964284/" target="_blank">here</a>.
-							</p>
+                            <p class="item-intro text-muted">This event was about contributing on greek Wikipedia (Βικιπαίδεια). Volunteers that attended the event, edited greek articles in order to enrich the famous encyclopedia and be a part of this community. At the beginning there was an introduction to Wikipedia and the basics one needs to know in order to contribute as well as some guidelines the volunteers should be aware of. <br /> The presentation of the event along with some documents with articles shortage can be found <a href="https://www.dropbox.com/sh/vyh6bdo68574uea/AABVDvwMgbYBj3u9I-uotJtha?dl=0" target="_blank">here</a>. The photos from the event can be found <a href="https://www.facebook.com/media/set/?set=a.1581774068778344.1073741833.1477395465882872&type=1" target="_blank">here</a> and <a href="https://www.flickr.com/photos/christosbacharakis/sets/72157649958964284/" target="_blank">here</a>.</p>
                             <!-- <p><strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p> -->
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: 25 April 2015</li>
                                 <li><strong>Time</strong>: 17:00</li>
                                 <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
-							<img class="img-responsive" src="img/events/editathon-poster.png" alt="">
+							              <img class="img-responsive" src="img/events/editathon-poster.png" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -1039,7 +1039,7 @@
     </div>
 
     <!-- Event Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -1054,7 +1054,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Arduino Coffee Break</h2>
                             <p class="item-intro text-muted">An Arduino-Themed coffee meeting, where there was a presentation about the Arduino Basics and the useful information someone will need to start playing with this popular tool.<br /> The material of this event can be found <a href="http://goo.gl/n5KOpX" target="_blank">here</a> (the presentation and some code examples to start playing with, both in Greek and in English).<br/> The photos of the event are uploaded on our <a href="https://www.facebook.com/shesharpgr" target="_blank">Facebook Page</a>.</p>
-							<ul class="list-inline">
+							              <ul class="list-inline">
                                 <li><strong>Date</strong>: 28 March 2015</li>
                                 <li><strong>Time</strong>: 17:00</li>
                                 <li><strong>Place</strong>: <a href="http://www.iheartthessaloniki.com/" target="_blank">iHeart</a></li>
@@ -1071,7 +1071,7 @@
     </div>
 
     <!-- Event Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
