--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
           <div class="team-member">
           <img src="img/team/alex1.jpg" class="img-responsive img-circle" alt="">
           <h4>Alexandros Dorodoulis</h4>
-          <p class="text-muted"></p>
+          <p class="text-muted">Alexandros is an Economics undergraduate student at the Aristotle University of Thessaloniki. His interests include software development, data analysis and he is always thirsty for more knowledge.</p>
           <ul class="list-inline social-buttons">
             <li><a href="https://twitter.com/AlexDorodoulis" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>
