add hashcode event

--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/hashcode-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Hash Code</h4>
+                        <p class="text-muted">Solve a real-life engineering problem from Google.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -907,6 +921,42 @@
     </div> -->
 
 	<!-- USED -->
+
+     <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Hash Code</h2>                           
+                            <p class="item-intro text-muted">
+                                <a href="https://hashcode.withgoogle.com/">Hash Code</a> is a team-based programming competition organized by Google for students and industry professionals (18+) across Europe, the Middle East and Africa.                            </p>
+                            <p>
+                                We've registered a competition hub and we are expecting <strong>you</strong> and <strong>your teammates</strong> to join us in this (programming) adventure!
+                            </p>
+                            
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: February 11<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 19:00</li>
+                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                            </ul>
+                            <p class="item-intro text-muted">Sign up <a href="https://hashcode.withgoogle.com/signup.html" target="_blank">here</a>!</p>
+                            <img class="img-responsive img-centered" src="img/events/hashcode-poster.png" alt="Intro to Web Dev Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
