add loveduino event

--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/arduino101-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Loveduino</h4>
+                        <p class="text-muted">Make arduino, not war!</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -922,7 +936,48 @@
 
 	<!-- USED -->
 
-     <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Arduino Workshop 101 - Loveduino</h2>  
+                            <p class="item-intro text-muted">
+                            Did you make any arrangements for Valentine's day? Well now you do!
+                            </p>
+                            <p class="item-intro text-muted">
+                            Welcome to our bright new Arduino-themed Workshop series! This is the first of many to come, where you and us will all meet together to learn about Arduino and (the best part) get our hands "dirty" with some projects! Our awesome instructor Anastasia will guide us through the amazing world of Arduino and help us get familiar with this little one.
+                            </p>
+                            <p class="item-intro text-muted">
+                            This part, the first one, will also be themed! So bring your little electronic valentines and your love for creations and don't miss this adorable event!
+                            </p>
+                            <p class="item-intro text-muted">
+                            See you at Tech Ministry love-duiners!
+                            </p>
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: February 14<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 17:00</li>
+                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                            </ul>
+                            <p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/492662114253465/" target="_blank">here</a>!</p>
+                            <img class="img-responsive img-centered" src="img/events/arduino101-poster.png" alt="Intro to Web Dev Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
