fix hash code event details

--- a/index.html
+++ b/index.html
@@ -992,8 +992,9 @@
                             <!-- Project Details Go Here -->
                             <h2>Hash Code</h2>                           
                             <p class="item-intro text-muted">
-                                <a href="https://hashcode.withgoogle.com/">Hash Code</a> is a team-based programming competition organized by Google for students and industry professionals (18+) across Europe, the Middle East and Africa.                            </p>
-                            <p>
+                                <a href="https://hashcode.withgoogle.com/">Hash Code</a> is a team-based programming competition organized by Google for students and industry professionals (18+) across Europe, the Middle East and Africa.                            
+                            </p>
+                            <p class="item-intro text-muted">
                                 We've registered a competition hub and we are expecting <strong>you</strong> and <strong>your teammates</strong> to join us in this (programming) adventure!
                             </p>
                             
