add moveduino event

--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/arduino102-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Moveduino</h4>
+                        <p class="text-muted">Make things move!</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -936,6 +950,50 @@
 
 	<!-- USED -->
 
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Arduino Workshop 102 - Moveduino</h2>  
+                            <p class="item-intro text-muted">
+                                Are you ready for our second Arduino series workshop? 
+                            </p>
+                            <p class="item-intro text-muted">
+                                Now that you have learned how to blink leds and push buttons, it's time to make a move (pun intended)! Bring your laptops, arduino, leds, buttons, potentiometers and small hobby motors and be prepared for a cool project :D
+                            </p>
+
+                            <p class="item-intro text-muted">
+                                Special thanks to our co-organizer codebender.cc and our great sponsor Mar Electronics Ltd!
+                            </p>
+
+                            <p class="item-intro text-muted">
+                                See you at Tech Ministry move-duiners!
+                            </p>
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: March 5<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 16:00</li>
+                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                            </ul>
+                            <p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p>
+                            <img class="img-responsive img-centered" src="img/events/arduino102-poster.png" alt="Moveduino Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -994,7 +1052,7 @@
                             <p class="item-intro text-muted">
                                 <a href="https://hashcode.withgoogle.com/">Hash Code</a> is a team-based programming competition organized by Google for students and industry professionals (18+) across Europe, the Middle East and Africa.                            
                             </p>
-                            <p class="item-intro text-muted">
+                            <p>
                                 We've registered a competition hub and we are expecting <strong>you</strong> and <strong>your teammates</strong> to join us in this (programming) adventure!
                             </p>
                             
