fix alt attributes

--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                                 <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/492662114253465/" target="_blank">here</a>!</p>
-                            <img class="img-responsive img-centered" src="img/events/arduino101-poster.png" alt="Intro to Web Dev Poster">
+                            <img class="img-responsive img-centered" src="img/events/arduino101-poster.png" alt="Loveduino Poster">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -1062,7 +1062,7 @@
                                 <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <p class="item-intro text-muted">Sign up <a href="https://hashcode.withgoogle.com/signup.html" target="_blank">here</a>!</p>
-                            <img class="img-responsive img-centered" src="img/events/hashcode-poster.png" alt="Intro to Web Dev Poster">
+                            <img class="img-responsive img-centered" src="img/events/hashcode-poster.png" alt="Hash Code Poster">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
