--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                             <p class="item-intro text-muted">
                                 <a href="https://hashcode.withgoogle.com/">Hash Code</a> is a team-based programming competition organized by Google for students and industry professionals (18+) across Europe, the Middle East and Africa.                            
                             </p>
-                            <p>
+                            <p class="item-intro text-muted">
                                 We've registered a competition hub and we are expecting <strong>you</strong> and <strong>your teammates</strong> to join us in this (programming) adventure!
                             </p>
                             
