facebook link for hash code

--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,10 @@
                                 <li><strong>Time</strong>: 19:00</li>
                                 <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
-                            <p class="item-intro text-muted">Sign up <a href="https://hashcode.withgoogle.com/signup.html" target="_blank">here</a>!</p>
+                            <p class="item-intro text-muted">
+                                Sign up <a href="https://hashcode.withgoogle.com/signup.html" target="_blank">here</a>! <br>
+                                Facebook event <a href="https://www.facebook.com/events/1152459091430987/" target="_blank">here</a>!
+                            </p>
                             <img class="img-responsive img-centered" src="img/events/hashcode-poster.png" alt="Hash Code Poster">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
