links to codebender and mar electronics on moveduino details

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                             </p>
 
                             <p class="item-intro text-muted">
-                                Special thanks to our co-organizer codebender.cc and our great sponsor Mar Electronics Ltd!
+                                Special thanks to our co-organizer <a href="https://codebender.cc/" target="_blank">codebender</a> and our great sponsor <a href="http://www.marelectronics.gr/" target="_blank">Mar Electronics Ltd</a>!
                             </p>
 
                             <p class="item-intro text-muted">
