add event for arduino day 2016

--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/arduinoday2016-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Arduino Day 2016</h4>
+                        <p class="text-muted">Bringing together people and projects.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -949,6 +963,61 @@
     </div> -->
 
 	<!-- USED -->
+
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Arduino Day 2016</h2>  
+                            <p class="item-intro text-muted">
+                                Once again, we're celebrating Arduino Day! 
+                            </p>
+                            <p class="item-intro text-muted">
+                               Let's revise all the things we have learnt so far, put some things into motion and demonstrate the real power of Arduino. Come, join us and let's celebrate this day of creativity!
+                            </p>                            
+
+                            <p class="item-intro text-muted">
+                                <strong>Timetable</strong><br>
+                                12:00-12:30 Welcome!<br>
+                                12:30-13:30 Code Bender - Programming Basics<br>
+                                13:30-14:00 1<sup>st</sup> project - Night Light!<br>
+                                14:00-15:00 2<sup>nd</sup> project - Air Condition!<br>
+                                15:00-16:00 Food and networking  <br>
+                                16:00-17:00 Tech Ministry hour!<br>
+                                17:00-18:00 Show and tell, Coffee break, Open mic<br>
+                            </p>
+
+
+                            <p class="item-intro text-muted">
+                                See you at Tech Ministry Arduiners!
+                            </p>
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: April 2<sup>nd</sup> 2016 </li>
+                                <li><strong>Time</strong>: 12:00-18:00</li>
+                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                            </ul>
+                            <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
+                            <img class="img-responsive img-centered" src="img/events/arduinoday2016-banner.png" alt="Moveduino Poster">
+
+                            <p class="item-intro text-muted">
+                                Special thanks to our co-organizer <a href="https://codebender.cc/" target="_blank">codebender</a> and our great sponsor <a href="http://www.marelectronics.gr/" target="_blank">Mar Electronics Ltd</a>!
+                            </p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
