--- a/index.html
+++ b/index.html
@@ -752,6 +752,23 @@
           </ul>
           </div>
         </div>
+          <div class="col-sm-4">
+          <div class="team-member">
+          <img src="img/team/george1.jpg" class="img-responsive img-circle" alt="">
+          <h4>George Kostopoulos</h4>
+          <p class="text-muted">George is an Automation Engineer from Thessaloniki, Greece, currently pursuing a Master of Science in Internet and WorldWide Web, specializing on Data Science and Software Technologies, at the Aristotle University of Thessaloniki. My main interests include Web Mining & Data Mining as well as Text Mining, Machine Learning and Artificial Intelligence. I am also fascinated by Natural Language Processing, Social Computing and Web Development.</p>
+          <ul class="list-inline social-buttons">
+            <li><a href="https://twitter.com/george_kst" target="_blank"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.facebook.com/george.kst" target="_blank"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li><a href="https://gr.linkedin.com/in/george-kostopoulos" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/georgekst" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+          </div>
+        </div>
         <!-- template row -->
         <!--
         <div class="col-sm-4">
