--- a/index.html
+++ b/index.html
@@ -950,8 +950,8 @@
                     </a>
                 </div>
                  <div class="col-md-3 col-sm-6">
-                    <a href="http://www.techministry.gr/" target="_blank">
-                        <img src="img/logos/tmlogo.png" class="img-responsive img-centered" alt="">
+                    <a href="https://lambdaspace.gr/" target="_blank">
+                        <img src="img/logos/lambdaspace.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
